--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,9 +28,12 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          # Artifact name
+          name: my-artifact
+          # A file, directory or wildcard pattern that describes what to upload
+          path: README.md
+          # The desired behavior if no files are found using the provided path.
