--- a/.github/workflows/gemini_test.yml
+++ b/.github/workflows/gemini_test.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: Test Gemini API
         env:
-          GOOGLE_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: python test_gemini_api.py
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        run: python test_gemini_api.py "${{ secrets.GEMINI_API_KEY }}"
